--- a/Makefile.version
+++ b/Makefile.version
@@ -5,7 +5,7 @@
 #
 
 # Update version string when a release is made
-VERSION = 1710XX
+VERSION = 171027
 
 # server info version, each cannot be more than a byte's value
 SVINFO_VERSION_YR = 17
