--- a/misc/xcode/ioquake3-Info.plist
+++ b/misc/xcode/ioquake3-Info.plist
@@ -25,7 +25,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHighResolutionCapable</key>
-	<false/>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>QUAKE III ARENA Copyright © 1999-2000 id Software, Inc. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
